# my_bot

./: CMakeLists.txt  LICENSE.md  arduino_hardware_plugin.xml  package.xml
config/: drive_robot.rviz  my_controllers.yaml  my_controllers_real.yaml  view_bot.rviz
description/: camera.xacro  gazebo_control.xacro  lidar.xacro  material.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  ros2_control_real.xacro
include/my_bot/: arduino_hardware.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_bot/share/ament_index/resource_index/package_run_dependencies/: my_bot
install/my_bot/share/ament_index/resource_index/parent_prefix_path/: my_bot
install/my_bot/share/my_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_bot/share/my_bot/cmake/: my_botConfig-version.cmake  my_botConfig.cmake
install/my_bot/share/my_bot/config/: empty.yaml
install/my_bot/share/my_bot/description/: robot.urdf.xacro
install/my_bot/share/my_bot/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  path.dsv  path.sh
install/my_bot/share/my_bot/launch/: rsp.launch.py
install/my_bot/share/my_bot/worlds/: empty.world
launch/: launch_robot.launch.py  launch_sim.launch.py  receive_camera.launch.py
log/: latest_build
src/: arduino_hardware.cpp
worlds/: obstacles.sdf
